# OpenAPI2FastAPI

./: .gitignore  README.md  ReadMeInfo.md  docker-compose.yaml  main.py  openapi.yaml  pyproject.toml  requirements.txt  setup.cfg
.openapi-generator/: FILES
openapi_server/: main.py  security_api.py
openapi_server/apis/: elements_api. testpy  elements_api.py  elements_api_base.py  elements_api_test.py
openapi_server/models/: data_unit.py  element.py  element_header.py  element_short.py  element_short_list.py  event_data_unit.py  get_element_header.py  get_event_data.py  get_measurement_pass_series.py  getdata_series.py  link.py  measurement_pass_unit.py  statistics.py
src/openapi_server/: security_api.py
src/openapi_server/apis/: elements_api_base.py  elements_app.py
src/openapi_server/impl/: __init__.py
src/openapi_server/models/: extra_models.py
tests/: test_elements_api.py
