[metadata]
name = openapi_server
version = 3.0.0-20241006
description = MIC4.0 - Cluster Special foundations - Element-Interfaces definition
long_description = file: README.md
keywords = OpenAPI MiC4.0 Element API Cluster special foundation
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
